--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -5,66 +5,77 @@
 #                                                     +:+ +:+         +:+      #
 #    By: lhermann <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2016/11/16 04:47:26 by lhermann          #+#    #+#              #
-#    Updated: 2016/11/16 07:39:59 by lhermann         ###   ########.fr        #
+#    Created: 2016/11/17 03:00:07 by lhermann          #+#    #+#              #
+#    Updated: 2016/11/17 06:00:12 by lhermann         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 
-SRC =	ft_memset.c\
-		ft_bzero.c\
-		ft_memcpy.c\
-		ft_memccpy.c\
-		ft_memmove.c\
-		ft_memchr.c\
-		ft_memcmp.c\
-		ft_isalnum.c\
-		ft_isalpha.c\
-		ft_isascii.c\
-		ft_isdigit.c\
-		ft_isprint.c\
-		ft_strcat.c\
-		ft_strchr.c\
-		ft_strcmp.c\
-		ft_strcpy.c\
-		ft_strdup.c\
-		ft_strlcat.c\
-		ft_strlen.c\
-		ft_strncat.c\
-		ft_strncmp.c\
-		ft_atoi.c\
-		ft_strncpy.c\
-		ft_strnstr.c\
-		ft_strrchr.c\
-		ft_strstr.c\
-		ft_tolower.c\
-		ft_toupper.c\
-		ft_putchar.c\
-		ft_putchar_fd.c\
-		ft_putendl.c\
-		ft_putendl_fd.c\
-		ft_putnbr.c\
-		ft_putnbr_fd.c\
-		ft_putstr.c\
-		ft_putstr_fd.c\
+FLGS =-Wall -Wextra -Werror
 
-SRCO = $(SRC:.c=.o)
+SRCS =ft_atoi.c\
+	  ft_bzero.c\
+	  ft_isalnum.c\
+	  ft_isalpha.c\
+	  ft_isascii.c\
+	  ft_isdigit.c\
+	  ft_isprint.c\
+	  ft_memalloc.c\
+	  ft_memccpy.c\
+	  ft_memchr.c\
+	  ft_memcmp.c\
+	  ft_memcpy.c\
+	  ft_memdel.c\
+	  ft_memmove.c\
+	  ft_memset.c \
+	  ft_putchar.c\
+	  ft_putchar_fd.c\
+	  ft_putendl.c\
+	  ft_putendl_fd.c\
+	  ft_putstr.c\
+	  ft_putstr_fd.c\
+	  ft_strcat.c\
+	  ft_strchr.c\
+	  ft_strcmp.c\
+	  ft_strcpy.c\
+	  ft_strdup.c\
+	  ft_strlcat.c\
+	  ft_strmap.c\
+	  ft_strmapi.c\
+	  ft_strncat.c\
+	  ft_strncmp.c\
+	  ft_strncpy.c\
+	  ft_strnew.c\
+	  ft_strnstr.c\
+	  ft_strstr.c\
+	  ft_tolower.c\
+	  ft_toupper.c\
+	  ft_strlen.c\
+	  ft_putnbr.c\
+	  ft_putnbr_fd.c\
+	  ft_striter.c\
+	  ft_striteri.c\
+	  ft_strrchr.c\
+	  ft_strdel.c\
+	  ft_strclr.c\
+	  ft_strrchr.c\
 
-FLAGS = -Wall -Werror -Wextra
+OBJS= $(SRCS:.c=.o)
+
+INC =-I./includes
 
 all: $(NAME)
 
-$(NAME): $(SRCO)
-		@ar rc $@ $(SRCO)
-
-%.o: %.c
-		@gcc -c $(FLAGS) -o $@ $^
+$(NAME):
+	gcc -c $(FLGS) $(SRCS) $(INC)
+	ar rc $(NAME) $(OBJS)
+	ranlib $(NAME)
 
 clean:
-		@/bin/rm -f $(SRCO)
+	rm -f $(OBJS)
 
 fclean: clean
-		@/bin/rm -rf $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
